--- a/apps/worker/templates/worker/Funcionario_list.html
+++ b/apps/worker/templates/worker/Funcionario_list.html
@@ -24,6 +24,10 @@
         </div>
     </div>
 
+    <div class="d-flex justify-content-end mb-3">
+        <button id="toggleStatusBtn" class="btn btn-secondary">DESLIGADOS</button>
+    </div>
+
     {% if funcionario_list %}
         <div class="table-responsive">
             <table class="table table-striped table-hover">
@@ -39,20 +43,29 @@
                         <th>Ações</th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody id="funcionarioTableBody">
                 {% for funcionario in funcionario_list %}
-                    <tr>
+                    <tr class="funcionario-row" data-status="{{ funcionario.atividade }}">
                         <td><a href="{% url 'dadosFuncionario' funcionario.pk %}" class="text-decoration-none">{{ funcionario.pk }}</a></td>
                         <td><a href="{% url 'dadosFuncionario' funcionario.pk %}" class="text-decoration-none">{{ funcionario.first_name }} {{ funcionario.last_name }}</a></td>
                         <td>{{ funcionario.email }}</td>
                         <td>{{ funcionario.telefone }}</td>
                         <td>{{ funcionario.departamento }}</td>
                         <td>{{ funcionario.comissao_acumulada }}</td>
-                        <td>{{ funcionario.departamento_empresa }}</td>
+                        <td class="status-cell">{{ funcionario.atividade }}</td>
                         <td class="botoestb">
-                            <a href="{% url 'funcionario_atualizar' pk=funcionario.pk %}" class="btn btn-secondary btn-sm {% if funcionario.finished_at %}disabled{% endif %}">
+                            <a href="{% url 'funcionario_atualizar' pk=funcionario.pk %}" class="btn btn-secondary btn-sm {% if funcionario.atividade == 'Inativo' %}disabled{% endif %}">
                                 <img style="display: inline-block; width: 15px; height: 15px" src="{% static 'imagens/edit.svg' %}" alt="Editar"> Editar
                             </a>
+                            {% if funcionario.atividade == "Inativo" or is_active is False %}
+                                <a href="{% url 'desligar_funcionario' pk=funcionario.pk %}?page={{ page_obj.number }}" class="btn btn-primary btn-sm">
+                                    <svg fill="#000000"height= "15px" width= "25px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 512 512" xml:space="preserve"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g> <g> <path d="M256,0C114.837,0,0,114.837,0,256s114.837,256,256,256s256-114.837,256-256S397.163,0,256,0z M256,490.667 c-129.387,0-234.667-105.28-234.667-234.667S126.613,21.333,256,21.333S490.667,126.613,490.667,256S385.387,490.667,256,490.667z "></path> </g> </g> </g></svg> Ligar
+                                </a>
+                            {% else %}
+                                <a href="{% url 'desligar_funcionario' pk=funcionario.pk %}?page={{ page_obj.number }}" class="btn btn-danger btn-sm {% if funcionario.id == user.id %}disabled{% endif %}">
+                                    <img src="{% static 'imagens/delete.svg' %}" alt="Excluir" style="height: 15px; width: 15px;"> Desligar
+                                </a>
+                            {% endif %}
                         </td>
                     </tr>
                 {% endfor %}
@@ -95,5 +108,37 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        const toggleStatusBtn = document.getElementById('toggleStatusBtn');
+        const funcionarioRows = document.querySelectorAll('.funcionario-row');
+        let showAtivos = true;
+
+        // Inicialmente, ocultar os funcionários "Inativos"
+        funcionarioRows.forEach(row => {
+            const status = row.getAttribute('data-status');
+            if (status === 'Inativo') {
+                row.style.display = 'none';
+            }
+        });
+
+        toggleStatusBtn.addEventListener('click', function() {
+            showAtivos = !showAtivos;
+            const newStatus = showAtivos ? 'DESLIGADOS' : 'ATIVOS';
+            toggleStatusBtn.textContent = newStatus;
+
+            funcionarioRows.forEach(row => {
+                const status = row.getAttribute('data-status');
+                if (showAtivos && status === 'Inativo') {
+                    row.style.display = 'none';
+                } else if (!showAtivos && status === 'Ativo') {
+                    row.style.display = 'none';
+                } else {
+                    row.style.display = '';
+                }
+            });
+        });
+    });
+</script>
 </body>
 </html>
